# rsdb

./: .cargo-tizen.toml  .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  README.md  RESEARCH_AND_PLAN.md
crates/rsdb-cli/: Cargo.toml
crates/rsdb-cli/src/: main.rs
crates/rsdb-proto/: Cargo.toml
crates/rsdb-proto/examples/: frame_read_probe.rs
crates/rsdb-proto/src/: lib.rs
crates/rsdb-proto/tests/: dhat_daemon_shell.rs  dhat_profile.rs  dhat_shell_loop.rs
device/rsdbd/: Cargo.toml
device/rsdbd/src/: main.rs
docs/: agent-feature-implementation-plan.md  agent-feature-plan.md  coding-agent-tool-intro.md  core-beliefs.md  index.md  operations.md  quality.md  repository-map.md  testing.md
docs/exec-plans/: index.md  tech-debt-tracker.md
docs/exec-plans/active/: README.md
docs/exec-plans/completed/: README.md
docs/references/: agent-tool-bootstrap.md
packaging/rpm/: rsdbd.rpmrc  rsdbd.spec
packaging/systemd/: rsdbd.service  rsdbd.socket
scripts/: build-rsdbd-rpm.sh  deploy-tizen.sh  dev-update-rsdbd.sh  install-completions.sh  release-rsdb.sh  rsdb-completion.bash
scripts/dev/: local-loopback-down.sh  local-loopback-up.sh  local-loopback.sh
scripts/test/: local-loopback-smoke.sh  rsdb-agent-regression.sh  rsdb-regression.sh
tizen/rpm/: rsdbd.spec
tizen/rpm/sources/: rsdbd-0.1.0-1.aarch64.rpm  rsdbd-0.1.0-1.armv7l.rpm  rsdbd-0.1.1-1.aarch64.rpm  rsdbd-0.1.1-1.armv7l.rpm  rsdbd-0.1.2-1.aarch64.rpm  rsdbd-0.1.2-1.armv7l.rpm  rsdbd-0.1.3-1.aarch64.rpm  rsdbd-0.1.3-1.armv7l.rpm  rsdbd.env  rsdbd.service
