[package]
name = "rsdb-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "rsdb"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
base64.workspace = true
clap.workspace = true
crossterm.workspace = true
glob.workspace = true
rsdb-proto = { path = "../rsdb-proto" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
