[package]
name = "rsdb-proto"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[features]
dhat-heap = []

[dev-dependencies]
dhat.workspace = true

[lints]
workspace = true
