[package]
name = "rsdb-proto"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
dhat = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[features]
dhat-heap = ["dep:dhat"]

[lints]
workspace = true
