[package]
name = "rsdbd"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
clap.workspace = true
glob.workspace = true
rsdb-proto = { path = "../../crates/rsdb-proto" }
rustix-openpty.workspace = true
sha2.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
